# AssassinsCreed2AP

./: .gitignore  Changelog.md  LICENSE  README.md  knownIssues.md
apworld/ac2/: Rules.py
client/: .gitignore  CMakeLists.txt  README.md  gen_map.py
client/src/: dllmain.cpp  game.hpp  overlay.hpp  records.hpp  test_records.cpp
worlds/: .gitignore
worlds/ac2/: Items.py  Locations.py  Options.py  Regions.py  Rules.py  __init__.py  archipelago.json
worlds/ac2/test/: __init__.py  test_generation.py
yaml-template/: template.yaml
